power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.css
.map {
    height: calc(100vh - 57px);
    max-height: calc(100vh - 57px);
    padding: 0;
}

.map-collapsed {
    height: calc(100vh - 106px);
    padding: 0;
}

.verlauf {
    min-height: calc(100vh - 106px);
}

.details {
    height: calc(100vh - 101px);
}

.btn-collapse {
    font-size: large;
    height: 2.75rem;
}

